--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,15 @@ android {
     
     // Related to https://github.com/scribejava/scribejava/issues/480
     // Scribe expects Java 7 or this custom Apache library
-    lintOptions {
-        lintConfig rootProject.file('gradle/lint.xml')
-    }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+    lint {
+        lintConfig file('gradle/lint.xml')
     }
 }
 
@@ -57,7 +57,8 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
-
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
 
 }
+
